# sloter

./: CMakeLists.txt  README.md  build_android.bat  build_ubuntu.sh  install_dependencies.sh  quick_start.sh  test_build.sh
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/slotmachine/game/: MainActivity.java
config/: auth.conf  database.conf
database/: setup_database.sh
src/: main.cpp
src/auth/: AuthManager.cpp  AuthManager.h
src/core/: GameEngine.cpp  GameEngine.h
src/database/: DatabaseManager.cpp  DatabaseManager.h
src/payment/: PaymentSystem.cpp  PaymentSystem.h
src/security/: SecurityManager.cpp  SecurityManager.h
src/ui/: GameUI.cpp  GameUI.h
